--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typescript": "^5.6.3",
     "vite": "^5.4.10",
     "svelte-check": "^3.8.6",
-    "tslib": "^2.7.0"
+    "tslib": "^2.7.0",
+    "svelte-preprocess": "^5.1.4"
   }
 }
