--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest"
   },
   "dependencies": {
     "leaflet": "^1.9.4",
@@ -19,6 +20,7 @@
     "vite": "^5.4.10",
     "svelte-check": "^3.8.6",
     "tslib": "^2.7.0",
-    "svelte-preprocess": "^5.1.4"
+    "svelte-preprocess": "^5.1.4",
+    "vitest": "^1.6.0"
   }
 }
