--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.1.2",
+    "@types/leaflet": "^1.9.21",
+    "@types/plotly.js": "^3.0.7",
+    "svelte-check": "^3.8.6",
+    "svelte-preprocess": "^5.1.4",
+    "tslib": "^2.7.0",
     "typescript": "^5.6.3",
     "vite": "^5.4.10",
-    "svelte-check": "^3.8.6",
-    "tslib": "^2.7.0",
-    "svelte-preprocess": "^5.1.4",
     "vitest": "^1.6.0"
   }
 }
